--- a/PersonalWebSite.Front/Pages/PageCv.razor
+++ b/PersonalWebSite.Front/Pages/PageCv.razor
@@ -2,28 +2,13 @@
 @page "/resume"
     <div class="cv-container">
         <div class="cv-content mat-elevation-z10 display-content">
-            <div class="d-flex flex-row primary-background cv-header container-fluid">
-                <div class="row">
-                    <div class="col-xl-3">
-                        <div class="row">
-                            <div class="col-sm">
-                                <PersonalWebSite.Front.Components.Cv.CvPhotoWithInfo />
-                            </div>
-                            <div class="col-sm">
-                                <PersonalWebSite.Front.Components.Cv.CvTitle />
-                            </div>
-                        </div>
-                        
-                        
-                    </div>
-                    <div class="col-xl">
-                        <PersonalWebSite.Front.Components.Cv.CvAboutMe />
-                    </div>
-                </div>
+            <div class="d-flex flex-column primary-background cv-header container-fluid">
+                <PersonalWebSite.Front.Components.Cv.CvPhotoWithInfo />
+                <PersonalWebSite.Front.Components.Cv.CvAboutMe />
             </div>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-sm-3 primary-background">
+                    <div class="col-lg-3 primary-background">
                         <PersonalWebSite.Front.Components.Cv.CvLang />
                         <PersonalWebSite.Front.Components.Cv.CvGraduate />
                         <PersonalWebSite.Front.Components.Cv.CvHobbies />
