--- a/PersonalWebSite.Front/Shared/MainLayout.razor
+++ b/PersonalWebSite.Front/Shared/MainLayout.razor
@@ -4,34 +4,46 @@
             <MatAppBarRow>
                 <MatAppBarSection>
                     @*<MatIconButton Icon="menu"></MatIconButton>*@
+                    <img src="images/photo.png" style="width: 60px; height: 60px" />
 
-                    <MatAppBarTitle>Site web personnel</MatAppBarTitle>
+                    <div class="d-flex flex-column ml-2">
+                        <span class="title-menu">Julien Gourdon</span>
+                        <span class="job">Développeur .NET/Web Fullstack</span>
+                    </div>
 
                     @*<MatIconButton Link="/resume">
-                        <i class="fas fa-id-card" aria-hidden="true">Resume</i>
-                    </MatIconButton>*@
+                <i class="fas fa-id-card" aria-hidden="true">Resume</i>
+            </MatIconButton>*@
 
-                    <MatButton Link="/resume" Unelevated="true">
-                        <i class="fas fa-id-card" aria-hidden="true">&nbsp;Resume</i>
-                    </MatButton>
+
+
                     @*<MatIconButton Link="/resume">
-                        <i class="fas fa-id-card" aria-hidden="true"> Resume</i>
-                    </MatIconButton>*@
+                <i class="fas fa-id-card" aria-hidden="true"> Resume</i>
+            </MatIconButton>*@
                 </MatAppBarSection>
-                <MatAppBarSection Align="@MatAppBarSectionAlign.End">
-
-                    <MatIconButton Link="/login" title="Login">
-                        <i class="fas fa-user-circle" aria-hidden="true"></i>
-                    </MatIconButton>
-                    <MatIconButton Link="https://github.com/julienGrd/" Target="_blank" title="Follow me on github">
-                        <i class="fab fa-github" aria-hidden="true"></i>
-                    </MatIconButton>
+                <MatAppBarSection Align="@MatAppBarSectionAlign.End" Class="d-none d-sm-flex">
+                    <NavLink class="link-menu" Match="NavLinkMatch.All" href="/"><i class="fas fa-home" aria-hidden="true"></i></NavLink>
+                    <NavLink class="link-menu" Match="NavLinkMatch.All" href="/resume">Cv</NavLink>
+                    <NavLink class="link-menu" Match="NavLinkMatch.All" href="/login" title="Connexion"><i class="fas fa-user-circle" aria-hidden="true"></i></NavLink>
+                    <NavLink class="link-menu" Match="NavLinkMatch.All" href="https://github.com/julienGrd/" target="_blank" title="Follow me on github"> <i class="fab fa-github" aria-hidden="true"></i></NavLink>
+                    @*<MatButton Link="/resume" Unelevated="true">
+                CV
+            </MatButton>
+            <MatButton Link="/login" title="Login">
+                <i class="fas fa-user-circle" aria-hidden="true"></i>
+            </MatButton>*@
+                    @*<MatButton Link="https://github.com/julienGrd/" Target="_blank" title="Follow me on github">
+                <i class="fab fa-github" aria-hidden="true"></i>
+            </MatButton>*@
                     @*<MatSelect Label="Pick a Food Group" @bind-Value="value1">
-                        <MatOptionString></MatOptionString>
-                        <MatOptionString Value="grains">Bread, Cereal, Rice, and Pasta</MatOptionString>
-                        <MatOptionString Value="vegetables">Vegetables</MatOptionString>
-                        <MatOptionString Value="fruit">Fruit</MatOptionString>
-                    </MatSelect>*@
+                <MatOptionString></MatOptionString>
+                <MatOptionString Value="grains">Bread, Cereal, Rice, and Pasta</MatOptionString>
+                <MatOptionString Value="vegetables">Vegetables</MatOptionString>
+                <MatOptionString Value="fruit">Fruit</MatOptionString>
+            </MatSelect>*@
+                </MatAppBarSection>
+                <MatAppBarSection Align="@MatAppBarSectionAlign.End" Class="d-flex d-sm-none">
+                    <MatIconButton Icon="menu"></MatIconButton>
                 </MatAppBarSection>
             </MatAppBarRow>
         </MatAppBar>
@@ -57,7 +69,7 @@
 @code{
      MatTheme theme = new MatTheme()
         {
-            Primary = "#475C6F",
+            Primary = "#243f58",
             Secondary = MatThemeColors.BlueGrey._500.Value
         };
 }
