--- a/PersonalWebSite.Front/wwwroot/css/site.css
+++ b/PersonalWebSite.Front/wwwroot/css/site.css
@@ -1,12 +1,45 @@
 ﻿:root {
-  --third-color: #37414b;
+  --third-color: #456888;
   --yellow: #F1C52E; }
 
+body .link-menu {
+  margin: 0.5rem;
+  font-size: 20px;
+  color: inherit; }
+  body .link-menu:hover {
+    color: var(--yellow);
+    text-decoration: inherit; }
+  body .link-menu.active {
+    color: var(--yellow);
+    border-bottom: 2px solid; }
+
+body .title-menu {
+  font-size: 24px;
+  margin: 0; }
+
+body .job {
+  font-size: 18px; }
+
+@media (max-width: 576px) {
+  body .title-menu {
+    font-size: 18px; }
+  body .job {
+    font-size: 12px; } }
+
+body .mdc-top-app-bar--fixed-adjust {
+  padding-top: 64px !important; }
+
+@media (max-width: 599px) {
+  body .mdc-top-app-bar__row {
+    height: 64px !important; } }
+
 body .body {
-  display: flex; }
+  display: flex;
+  min-width: 0; }
   body .body .cv-container {
     display: flex;
     flex-grow: 1;
+    min-width: 0;
     /*margin: auto;
         margin-top: 2rem;
         margin-bottom: 2rem;*/ }
@@ -15,6 +48,7 @@ body .body {
             height: 297mm;*/
       display: flex;
       flex-grow: 1;
+      min-width: 0;
       /*margin: 1rem;*/ }
       body .body .cv-container .cv-content .primary-background {
         background-color: var(--mdc-theme-primary);
@@ -36,16 +70,19 @@ body .body {
       body .body .cv-container .cv-content.display-content {
         flex-direction: column; }
         body .body .cv-container .cv-content.display-content .cv-header {
-          padding-top: 3px;
-          padding-right: 3px; }
+          padding-top: 6px; }
         body .body .cv-container .cv-content.display-content .title-about-me {
           display: none; }
         body .body .cv-container .cv-content.display-content .title-lang {
           margin-top: 0; }
       body .body .cv-container .cv-content .fas, body .body .cv-container .cv-content .fab {
         font-size: 14px; }
+      body .body .cv-container .cv-content a, body .body .cv-container .cv-content a:visited, body .body .cv-container .cv-content a:hover {
+        color: inherit;
+        text-decoration: none; }
       body .body .cv-container .cv-content .photo-with-info {
-        display: flex; }
+        /*display: flex;*/
+        padding-top: 5px; }
         body .body .cv-container .cv-content .photo-with-info .photo {
           display: flex; }
         body .body .cv-container .cv-content .photo-with-info .info-photo {
@@ -53,9 +90,6 @@ body .body {
           margin-left: 3px;
           flex-direction: column;
           flex-grow: 1; }
-          body .body .cv-container .cv-content .photo-with-info .info-photo a, body .body .cv-container .cv-content .photo-with-info .info-photo a:visited {
-            color: var(--white);
-            text-decoration: underline; }
           body .body .cv-container .cv-content .photo-with-info .info-photo .first-line-info {
             padding-top: 5px; }
             body .body .cv-container .cv-content .photo-with-info .info-photo .first-line-info .age {
@@ -86,7 +120,7 @@ body .body {
       body .body .cv-container .cv-content .resume {
         font-size: 13px;
         text-align: justify;
-        padding: 2px; }
+        padding-top: 5px; }
       body .body .cv-container .cv-content .langue-bloc {
         display: flex; }
         body .body .cv-container .cv-content .langue-bloc .country {
