--- a/PersonalWebSite.Front/wwwroot/css/site.scss
+++ b/PersonalWebSite.Front/wwwroot/css/site.scss
@@ -1,16 +1,65 @@
 ﻿:root {
-    --third-color: #37414b;
+    --third-color: #456888;
+    
     --yellow: #F1C52E;
 }
 
 body {
+    .link-menu {
+        margin: 0.5rem;
+        font-size: 20px;
+        color: inherit;
+
+        &:hover {
+            color: var(--yellow);
+            text-decoration: inherit;
+        }
+
+        &.active {
+            color: var(--yellow);
+            border-bottom: 2px solid;
+        }
+    }
+
+    .title-menu {
+        font-size: 24px;
+        margin: 0;
+    }
+
+    .job {
+        font-size: 18px;
+    }
+
+    @media (max-width: 576px) {
+        .title-menu {
+            font-size: 18px;
+        }
+
+        .job {
+            font-size: 12px;
+        }
+    }
+
+    .mdc-top-app-bar--fixed-adjust {
+        padding-top: 64px !important;
+    }
+
+    @media (max-width: 599px) {
+        .mdc-top-app-bar__row {
+            height: 64px !important;
+        }
+    }
+
 
     .body {
         display: flex;
+        min-width: 0;
+
 
         .cv-container {
             display: flex;
             flex-grow: 1;
+            min-width: 0;
             /*margin: auto;
         margin-top: 2rem;
         margin-bottom: 2rem;*/
@@ -19,6 +68,7 @@ body {
             height: 297mm;*/
                 display: flex;
                 flex-grow: 1;
+                min-width: 0;
                 /*margin: 1rem;*/
                 .primary-background {
                     background-color: var(--mdc-theme-primary);
@@ -51,8 +101,7 @@ body {
 
 
                     .cv-header {
-                        padding-top: 3px;
-                        padding-right: 3px;
+                        padding-top: 6px;
                     }
 
                     .title-about-me {
@@ -68,11 +117,15 @@ body {
                     font-size: 14px;
                 }
 
+                a, a:visited, a:hover {
+                    color: inherit;
+                    text-decoration: none;
+                }
+
 
                 .photo-with-info {
-                    display: flex;
-
-
+                    /*display: flex;*/
+                    padding-top: 5px;
                     .photo {
                         display: flex;
                     }
@@ -83,10 +136,7 @@ body {
                         flex-direction: column;
                         flex-grow: 1;
 
-                        a, a:visited {
-                            color: var(--white);
-                            text-decoration: underline;
-                        }
+
 
                         .first-line-info {
                             padding-top: 5px;
@@ -136,7 +186,7 @@ body {
                 .resume {
                     font-size: 13px;
                     text-align: justify;
-                    padding: 2px;
+                    padding-top: 5px;
                 }
 
                 .langue-bloc {
