revue design, abandon material

--- a/PersonalWebSite.Front/Pages/PageCv.razor
+++ b/PersonalWebSite.Front/Pages/PageCv.razor
@@ -1,7 +1,7 @@
 ﻿@inherits PageCvViewModel
 @page "/resume"
     <div class="cv-container">
-        <div class="cv-content mat-elevation-z10 display-content">
+        <div class="cv-content display-content">
             <div class="d-flex flex-column primary-background cv-header container-fluid">
                 <PersonalWebSite.Front.Components.Cv.CvPhotoWithInfo />
                 <PersonalWebSite.Front.Components.Cv.CvAboutMe />
