--- a/PersonalWebSite.Front/Pages/_Host.cshtml
+++ b/PersonalWebSite.Front/Pages/_Host.cshtml
@@ -34,6 +34,6 @@
 
     <script src="_framework/blazor.server.js"></script>
     <script src="js/jquery.min.js"></script>
-    <script src="_content/MatBlazor/dist/matBlazor.js"></script>
+    <script src="~/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
