--- a/PersonalWebSite.Front/_Imports.razor
+++ b/PersonalWebSite.Front/_Imports.razor
@@ -7,3 +7,4 @@
 @using Microsoft.JSInterop
 @using PersonalWebSite.Front
 @using PersonalWebSite.Front.Shared
+@using PersonalWebSite.Front.Components
