--- a/PersonalWebSite.Front/wwwroot/css/site.scss
+++ b/PersonalWebSite.Front/wwwroot/css/site.scss
@@ -1,10 +1,24 @@
-﻿:root {
+﻿
+$theme-colors: ( "primary": #243f58, "secondary": #F1C52E);
+@import "../css/bootstrap/scss/bootstrap.scss";
+
+
+:root {
     --third-color: #456888;
     --primary: #243f58;
     --yellow: #F1C52E;
+    /*--test: #666666;*/
 }
 
+html {
+    /*width: 100%;
+    height: 100%;
+    min-height: 0;*/
+}
 body {
+    /*width: 100%;
+    height: 100%;
+    min-height: 0;*/
     /*.mdc-top-app-bar--fixed-adjust {
         padding-top: 64px !important;
     }
@@ -80,6 +94,9 @@ body {
     main {
         display: flex;
         min-width: 0;
+        min-height: 0;
+        width: 100%;
+        height: 100%;
         /*margin-top: 64px;*/
         .cv-container {
             display: flex;
@@ -352,6 +369,88 @@ body {
                     flex-grow: 1;
                     flex: 1 1 0;
                 }
+            }
+        }
+
+        .login-container {
+            display: flex;
+            flex-grow: 1;
+
+            .user_card {
+                height: 350px;
+
+                @include media-breakpoint-up(sm) {
+                    width: 350px;
+                }
+
+                margin-top: 10px;
+                margin-bottom: auto;
+                background: theme-color("primary");
+                color: white;
+                /*position: relative;*/
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                padding: 10px;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+                -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+                -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+                border-radius: 5px;
+            }
+            /*.brand_logo_container {
+                position: absolute;
+                height: 170px;
+                width: 170px;
+                top: -75px;
+                border-radius: 50%;
+                background: #60a3bc;
+                padding: 10px;
+                text-align: center;
+            }
+
+            .brand_logo {
+                height: 150px;
+                width: 150px;
+                border-radius: 50%;
+                border: 2px solid white;
+            }*/
+            /*.form_container {
+                margin-top: 100px;
+            }*/
+            .login_btn {
+                width: 100%;
+                background: theme-color("secondary") !important;
+                /*color: white !important;*/
+            }
+
+            .login_btn:focus {
+                box-shadow: none !important;
+                outline: 0px !important;
+            }
+
+            .login_container {
+                padding: 0 2rem;
+            }
+
+            .input-group-text {
+                background: theme-color("secondary") !important;
+                color: theme-color("primary") !important;
+                border: 0 !important;
+                border-radius: 0.25rem 0 0 0.25rem !important;
+            }
+
+            .input_user,
+            .input_pass:focus {
+                box-shadow: none !important;
+                outline: 0px !important;
+            }
+
+            .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
+                background-color: theme-color("secondary") !important;
+            }
+
+            a, a:visited, a:hover {
+                color: white !important;
             }
         }
     }
