Mise en place multilangue + entity framework avec identity

--- a/PersonalWebSite.Front/_Imports.razor
+++ b/PersonalWebSite.Front/_Imports.razor
@@ -8,3 +8,6 @@
 @using PersonalWebSite.Front
 @using PersonalWebSite.Front.Shared
 @using PersonalWebSite.Front.Components
+@using Microsoft.Extensions.Localization
+@using PersonalWebSite.Front.Model
+@using PersonalWebSite.Front.Services
