--- a/PersonalWebSite.Front/Shared/MainLayout.razor
+++ b/PersonalWebSite.Front/Shared/MainLayout.razor
@@ -1,47 +1,74 @@
 ﻿@inherits LayoutComponentBase
-    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand" href="/"><img src="images/photo.png" style="width: 60px; height: 60px" /></a>
-        <div class="d-flex flex-column ml-2">
-            <span class="title-menu">Julien Gourdon</span>
-            <span class="job">Développeur .NET/Web Fullstack</span>
-        </div>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item" title="">
-                    <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
-                        <i class="fas fa-home" aria-hidden="true"></i>&nbsp;Accueil
-                    </NavLink>
-                </li>
-                <li class="nav-item" title="CV">
-                    <NavLink class="nav-link" href="/resume" Match="NavLinkMatch.All">
-                        <i class="fas fa-id-card" aria-hidden="true"></i>&nbsp;CV
-                    </NavLink>
-                </li>
-                <li class="nav-item" title="Connexion">
-                    <NavLink class="nav-link" href="/login" Match="NavLinkMatch.All">
-                        <i class="fas fa-user-circle" aria-hidden="true"></i>&nbsp;Connexion
-                    </NavLink>
-                </li>
-                <li class="nav-item" title="Follow me on github">
-                    <NavLink class="nav-link" href="https://github.com/julienGrd/" target="_blank" Match="NavLinkMatch.All">
-                        <i class="fab fa-github" aria-hidden="true"></i>&nbsp;Follow me on github
-                    </NavLink>
-                </li>
-            </ul>
-        </div>
+@inject IStringLocalizer<MainLayout> L
+@inject LanguageService _languageService
+<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="/"><img src="images/photo.png" style="width: 60px; height: 60px" /></a>
+    <div class="d-flex flex-column ml-2">
+        <span class="title-menu">Julien Gourdon</span>
+        <span class="job">@L["JobTitle"]</span>
+    </div>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+            @*<li class="nav-item" title="">
+            <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
+                <i class="fas fa-home" aria-hidden="true"></i>&nbsp;Accueil
+            </NavLink>
+        </li>*@
+            <li class="nav-item">
+                <NavLink class="nav-link" href="/blog/travel" Match="NavLinkMatch.All">
+                    <i class="fas fa-fw fa-globe-americas" aria-hidden="true"></i>&nbsp;@L["TravelBlogMenuTitle"]
+                </NavLink>
+            </li>
+            <li class="nav-item">
+                <NavLink class="nav-link" href="/blog/development" Match="NavLinkMatch.All">
+                    <i class="fas fa-fw fa-file-code" aria-hidden="true"></i>&nbsp;@L["DevelopmentBlogMenuTitle"]
+                </NavLink>
+            </li>
+            <li class="nav-item">
+                <NavLink class="nav-link" href="/resume" Match="NavLinkMatch.All">
+                    <i class="fas fa-fw fa-id-card" aria-hidden="true"></i>&nbsp;@L["ResumeMenuTitle"]
+                </NavLink>
+            </li>
+            <li class="nav-item" title="@L["ConnectMenuTitle"]">
+                <NavLink class="nav-link" href="/login" Match="NavLinkMatch.All">
+                    <i class="fas fa-fw fa-user-circle" aria-hidden="true"></i>&nbsp;@L["ConnectMenuTitle"]
+                </NavLink>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <img src="images/@_languageService.GetCurrentLanguage().Icon" class="fas fa-fw" title="@L["LangMenuTitle"]" />&nbsp; @_languageService.GetCurrentLanguage().Name
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                    @foreach(var lang in _languageService.GetDefaults())
+                    {
+                        <a class="dropdown-item" @onclick="@(() => SetLanguage(lang))"><img src="images/@lang.Icon" style="height: 25px;"/>&nbsp;@lang.Name</a>
+                    }
+                </div>
+            </li>
+            <li class="nav-item" title="@L["GithubMenuTitle"]">
+                <NavLink class="nav-link" href="https://github.com/julienGrd/" target="_blank" Match="NavLinkMatch.All">
+                    <i class="fab fa-github" aria-hidden="true"></i>
+                </NavLink>
+            </li>
+        </ul>
+    </div>
 
-    </nav>
-    <main role="main">
-        @Body
-    </main>
-    <footer>
+</nav>
+<main role="main">
+    @Body
+</main>
+<footer>
+</footer>
 
-    </footer>
-    
-   
-    
+
+
 @code{
+    protected void SetLanguage(Language l)
+    {
+        _languageService.SetLanguage(l);
+        this.StateHasChanged();
+    }
 }
