--- a/PersonalWebSite.Front/Pages/PageCvPrint.razor
+++ b/PersonalWebSite.Front/Pages/PageCvPrint.razor
@@ -2,7 +2,11 @@
 <div class="cv-container">
     <div class="cv-content printable-content">
         <div class="left-part primary-background">
-            <PersonalWebSite.Front.Components.Cv.CvPhotoWithInfo />
+            <div class="d-flex">
+                <img src="images/photo.png" style="width: 60px; height: 60px" />
+                <PersonalWebSite.Front.Components.Cv.CvGeneralInfo />
+            </div>
+            
             <PersonalWebSite.Front.Components.Cv.CvTitle />
             <PersonalWebSite.Front.Components.Cv.CvAboutMe />
             <PersonalWebSite.Front.Components.Cv.CvLang />
