--- a/PersonalWebSite.Front/Pages/Index.razor
+++ b/PersonalWebSite.Front/Pages/Index.razor
@@ -1,4 +1,10 @@
 ﻿@page "/"
     <div class="">
         Home page
+        @*<button onclick="testFileSystem()">test file system</button>
+
+        <button onclick="loadIframe()">load iframe</button>
+
+        <button onclick="retrieveFile()">retrieve file system</button>*@
     </div>
+    <iframe id="myiframe" />
