--- a/PersonalWebSite.Front/Pages/_Host.cshtml
+++ b/PersonalWebSite.Front/Pages/_Host.cshtml
@@ -10,16 +10,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PersonalWebSite.Front</title>
+    <title>jgdev.fr</title>
     <base href="~/" />
     @*<link href="css/bootstrap.min.css" rel="stylesheet" />*@
     <link href="css/fontawesome/all.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <app>
-        <component type="typeof(App)" render-mode="ServerPrerendered" />
-    </app>
+    @*<app>
+        
+    </app>*@
+    <component type="typeof(App)" render-mode="ServerPrerendered" />
 
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
