--- a/PersonalWebSite.Front/Shared/MainLayout.razor
+++ b/PersonalWebSite.Front/Shared/MainLayout.razor
@@ -2,14 +2,21 @@
 @inject IStringLocalizer<MainLayout> L
 @inject LanguageService _languageService
 <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    
+    <div class="navbar-brand d-flex">
+        <a href="/">
+            <img src="images/photo.png" style="width: 60px; height: 60px" />
+        </a>
+        
+         <div class="d-flex flex-column ms-2">
+            <span class="title-menu">Julien Gourdon</span>
+            <span class="job">@L["JobTitle"]</span>
+        </div>
+    </div>
+    <button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="/"><img src="images/photo.png" style="width: 60px; height: 60px" /></a>
-    <div class="d-flex flex-column ml-2">
-        <span class="title-menu">Julien Gourdon</span>
-        <span class="job">@L["JobTitle"]</span>
-    </div>
+   
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
         <ul class="navbar-nav">
             @*<li class="nav-item" title="">
@@ -55,7 +62,7 @@
             </li>
         </ul>
     </div>
-
+    
 </nav>
 <main role="main">
     @Body
