--- a/PersonalWebSite.Front/wwwroot/css/site.scss
+++ b/PersonalWebSite.Front/wwwroot/css/site.scss
@@ -22,6 +22,7 @@ body {
     height: 100%;
     min-height: 0;
     display: flex;
+    flex-direction: column;
 
     app {
         min-height: 0;
@@ -53,7 +54,7 @@ body {
         border-bottom: 1px solid var(--third-color);
         /*height: 64px;*/
         padding: 0.2rem 0.2rem;
-        justify-content: flex-start;
+        /*justify-content: flex-start;*/
 
         .navbar-brand {
             margin-left: 0.2rem;
@@ -115,12 +116,12 @@ body {
         }
 
         @media (max-width: 576px) {
-            .title-menu {
+            /*.title-menu {
                 font-size: 18px;
-            }
+            }*/
 
             .job {
-                font-size: 12px;
+                font-size: 15px;
             }
         }
     }
@@ -161,6 +162,10 @@ body {
                         padding: 8px;
                         flex-direction: column;
                         max-width: 20rem;
+
+                        .photo-with-info {
+                            margin-left: 6px;
+                        }
                     }
 
                     .right-part {
@@ -511,6 +516,16 @@ body {
             right: 0.75rem;
             top: 0.5rem;
         }
+    }
+}
+
+@media print {
+    nav.navbar{
+        display: none;
+    }
+
+    a{
+        text-decoration: none;
     }
 }
 
