--- a/PersonalWebSite.Front/Pages/PageCv.razor
+++ b/PersonalWebSite.Front/Pages/PageCv.razor
@@ -9,7 +9,7 @@
                 <div class="flex-grow-1">
                     <PersonalWebSite.Front.Components.Cv.CvGeneralInfo />
                 </div>
-                <a title="Exporter en PDF" style="    white-space: nowrap;" target="_blank" href="@($"/CV/cv_julien_gourdon_{LanguageService.GetCurrentLanguage().Localization}.pdf")"><i class="fa-solid fa-file-pdf"></i>&nbsp;Télécharger</a>
+                <a title="Exporter en PDF" style="white-space: nowrap;" target="_blank" href="@($"/CV/cv_julien_gourdon_{LanguageService.GetCurrentLanguage().Localization}.pdf")"><i class="fa-solid fa-file-pdf"></i>&nbsp;Télécharger</a>
             </div>
             <PersonalWebSite.Front.Components.Cv.CvAboutMe />
         </div>
@@ -18,7 +18,7 @@
                 <div class="col-lg-3 primary-background">
                     <PersonalWebSite.Front.Components.Cv.CvLang />
                     <PersonalWebSite.Front.Components.Cv.CvGraduate />
-                    <PersonalWebSite.Front.Components.Cv.CvHobbies />
+                    @*<PersonalWebSite.Front.Components.Cv.CvHobbies />*@
                 </div>
                 <div class="col-sm">
                     <PersonalWebSite.Front.Components.Cv.CvSkills />
