--- a/PersonalWebSite.Front/Components/Cv/CvGeneralInfo.razor
+++ b/PersonalWebSite.Front/Components/Cv/CvGeneralInfo.razor
@@ -3,7 +3,7 @@
             <img src="images/photo.png" style="width: 90px; height: 90px" />
         </div>*@
     <span class="age text-nowrap"><i class="fas fa-calendar-alt"></i>&nbsp;34 Ans</span>
-    <a href="tel:+33645126661" class="phone text-nowrap"><i class="fas fa-phone"></i>&nbsp;+33645126661</a>
+    <a href="tel:+33645126661" class="phone text-nowrap ms-1"><i class="fas fa-phone"></i>&nbsp;+33645126661</a>
     <a href="mailto:jul.gourdon@gmail.com" class="mail text-nowrap"><i class="fas fa-at"></i>&nbsp;jul.gourdon@gmail.com</a>
     <a class="skype text-nowrap" href="skype:julien.gourdon?add"><i class="fab fa-skype"></i>&nbsp;julien.gourdon</a>
     @*<div class="info-photo">
