--- a/PersonalWebSite.Front/wwwroot/css/site.css
+++ b/PersonalWebSite.Front/wwwroot/css/site.css
@@ -11262,10 +11262,19 @@ body main .cv-container .cv-content.printable-content .left-part {
   display: flex;
   padding: 8px;
   flex-direction: column;
-  max-width: 20rem;
+  max-width: 18rem;
 }
 body main .cv-container .cv-content.printable-content .left-part .photo-with-info {
   margin-left: 6px;
+}
+body main .cv-container .cv-content.printable-content .left-part .name {
+  font-size: 22px;
+}
+body main .cv-container .cv-content.printable-content .left-part .role {
+  font-size: 18px;
+}
+body main .cv-container .cv-content.printable-content .left-part .resume {
+  font-size: 12px;
 }
 body main .cv-container .cv-content.printable-content .right-part {
   display: flex;
