--- a/PersonalWebSite.Front/wwwroot/css/site.scss
+++ b/PersonalWebSite.Front/wwwroot/css/site.scss
@@ -175,7 +175,7 @@ body {
                             font-size: 18px;
                         }
 
-                        .resume{
+                        .resume {
                             font-size: 12px;
                         }
                     }
@@ -308,6 +308,8 @@ body {
                                 line-height: 16px;
                                 height: 100%;
                                 padding-left: 2px;
+                                align-items: center;
+                                display: flex;
                             }
                         }
                     }
