--- a/PersonalWebSite.Front/Pages/PageCv.razor
+++ b/PersonalWebSite.Front/Pages/PageCv.razor
@@ -2,7 +2,7 @@
 @inherits CustomBaseComponent
 
 <div class="cv-container">
-    <div class="cv-content display-content">
+   @* <div class="cv-content display-content">
         <div class="d-flex flex-column primary-background cv-header container-fluid">
 
             <div class="d-flex">
@@ -18,7 +18,6 @@
                 <div class="col-lg-3 primary-background">
                     <PersonalWebSite.Front.Components.Cv.CvLang />
                     <PersonalWebSite.Front.Components.Cv.CvGraduate />
-                    @*<PersonalWebSite.Front.Components.Cv.CvHobbies />*@
                 </div>
                 <div class="col-sm">
                     <PersonalWebSite.Front.Components.Cv.CvSkills />
@@ -27,6 +26,27 @@
             </div>
         </div>
 
+    </div>*@
+
+    <div class="cv-content display-content">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-3 left-part primary-background ">
+                    <PersonalWebSite.Front.Components.Cv.CvGeneralInfo WithCvDownload="true" />
+                    <PersonalWebSite.Front.Components.Cv.CvAboutMe />
+                    <PersonalWebSite.Front.Components.Cv.CvLang />
+                    <PersonalWebSite.Front.Components.Cv.CvGraduate />
+                </div>
+                <div class="col-lg-9 right-part">
+                    <div class="d-none d-lg-flex justify-content-end">
+                        <a title="Exporter en PDF" style="white-space: nowrap;" target="_blank" href="@($"/CV/cv_julien_gourdon_{LanguageService.GetCurrentLanguage().Localization}.pdf")"><i class="fa-solid fa-file-pdf"></i>&nbsp;Télécharger</a>
+                    </div>
+                    
+                    <PersonalWebSite.Front.Components.Cv.CvSkills />
+                    <PersonalWebSite.Front.Components.Cv.CvExperience />
+                </div>
+            </div>
+        </div>
     </div>
 
 </div>
