--- a/PersonalWebSite.Front/Components/Cv/CvAboutMe.razor
+++ b/PersonalWebSite.Front/Components/Cv/CvAboutMe.razor
@@ -2,7 +2,7 @@
     <i class="fas fa-user"></i>&nbsp;Mon parcours
 </div>
 <div class="left-part-bloc resume">
-    <p>Fort de 9 années d'expériences dans le développement d'applications, j'interviens depuis le début de l'année 2019 chez un petit éditeur de logiciel spécialisé dans la gestion de centres médicaux pour refondre complètement l'application existante qui se fait vieillissante. Je pars sur une stack technique totalement neuve (.net 6/blazor) pour profiter des dernières avancées dans le monde du web, j'en profite pour mettre en place une architecture et des principes de développements solides, l'objectif étant d'en faire une version maintenable pour les 15 prochaines années.</p>
+    <p>Fort de 9 années d'expériences dans le développement d'applications, j'interviens depuis le début de l'année 2019 chez un petit éditeur de logiciel spécialisé dans la gestion de centres médicaux pour refondre complètement l'application existante qui se fait vieillissante. Je pars sur une stack technique totalement neuve (.NET6/blazor) pour profiter des dernières avancées dans le monde du web, j'en profite pour mettre en place une architecture et des principes de développements solides, l'objectif étant d'en faire une version maintenable pour les 15 prochaines années.</p>
     <p>
         Menant une vie de nomade depuis 7 ans, le télé-travail et la liberté dans mon mode d'intervention est non négociable si je dois travailler avec une entreprise. Je compense ces avantages par une forte expertise, une autonomie totale, et je peux me déplacer ponctuellement n'importe ou dans le monde si le besoin s'en fait sentir.
     </p>
