--- a/PersonalWebSite.Front/wwwroot/css/site.scss
+++ b/PersonalWebSite.Front/wwwroot/css/site.scss
@@ -204,6 +204,12 @@ body {
                     .title-lang {
                         margin-top: 0;
                     }
+
+                    .right-part {
+                        a {
+                            color: var(--primary);
+                        }
+                    }
                 }
 
                 .fas, .fab {
@@ -214,9 +220,10 @@ body {
 
 
                 .photo-with-info {
-                    /*display: flex;*/
+                    display: flex;
                     padding-top: 5px;
-
+                    flex-wrap: wrap;
+                    justify-content: space-between;
                     .photo {
                         display: flex;
                     }
