--- a/PersonalWebSite.Front/Pages/PageCv.razor
+++ b/PersonalWebSite.Front/Pages/PageCv.razor
@@ -42,7 +42,7 @@
                         <a title="Exporter en PDF" style="white-space: nowrap;" target="_blank" href="@($"/CV/cv_julien_gourdon_{LanguageService.GetCurrentLanguage().Localization}.pdf")"><i class="fa-solid fa-file-pdf"></i>&nbsp;Télécharger</a>
                     </div>
                     
-                    <PersonalWebSite.Front.Components.Cv.CvSkills />
+                    @*<PersonalWebSite.Front.Components.Cv.CvSkills />*@
                     <PersonalWebSite.Front.Components.Cv.CvExperience />
                 </div>
             </div>
