--- a/PersonalWebSite.Front/Components/Cv/CvExperience.razor
+++ b/PersonalWebSite.Front/Components/Cv/CvExperience.razor
@@ -1,4 +1,4 @@
-﻿<div class="experience-container">
+﻿@*<div class="experience-container">
     <div class="year-container"></div>
     <div class="arrow-container">
 
@@ -6,4 +6,171 @@
     <div class="list-experience">
 
     </div>
+</div>*@
+
+@*<div class="card experience-container">
+    <div class="card-header">
+        Expériences
+    </div>
+    <div class="card-body">
+        <section id="cd-timeline" class="cd-container">
+            <div class="cd-timeline-block">
+                <div class="cd-timeline-img cd-picture">
+                </div>
+
+                <div class="cd-timeline-content">
+                    <h2>Penta Consulting</h2>
+                    <div class="timeline-content-info">
+                        <span class="timeline-content-info-title">
+                            <i class="fa fa-certificate" aria-hidden="true"></i>
+                            Front End Developer
+                        </span>
+                        <span class="timeline-content-info-date">
+                            <i class="fa fa-calendar-o" aria-hidden="true"></i>
+                            June 2016 - Present
+                        </span>
+                    </div>
+                    <p>Working alongside the designer team implementing the designs, also developing custom solutions to address team necessities.</p>
+                    <ul class="content-skills">
+                        <li>HTML5</li>
+                        <li>CSS3</li>
+                        <li>JavaScript</li>
+                        <li>jQuery</li>
+                        <li>Wordpress</li>
+                    </ul>
+                </div> <!-- cd-timeline-content -->
+            </div> <!-- cd-timeline-block -->
+
+            <div class="cd-timeline-block">
+                <div class="cd-timeline-img cd-movie">
+                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-content">
+                    <h2>Title of section 2</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
+                    <span class="cd-date">Jan 18</span>
+                </div> <!-- cd-timeline-content -->
+            </div> <!-- cd-timeline-block -->
+
+            <div class="cd-timeline-block">
+                <div class="cd-timeline-img cd-picture">
+                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-content">
+                    <h2>Title of section 3</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
+                    <span class="cd-date">Jan 24</span>
+                </div> <!-- cd-timeline-content -->
+            </div> <!-- cd-timeline-block -->
+
+            <div class="cd-timeline-block">
+                <div class="cd-timeline-img cd-location">
+                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-content">
+                    <h2>Title of section 4</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                    <span class="cd-date">Feb 14</span>
+                </div> <!-- cd-timeline-content -->
+            </div> <!-- cd-timeline-block -->
+
+            <div class="cd-timeline-block">
+                <div class="cd-timeline-img cd-location">
+                </div>
+
+                <div class="cd-timeline-content">
+                    <h2>Title of section 5</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
+                    <span class="cd-date">Feb 18</span>
+                </div> <!-- cd-timeline-content -->
+            </div> <!-- cd-timeline-block -->
+
+            <div class="cd-timeline-block">
+                <div class="cd-timeline-img cd-movie">
+                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-content">
+                    <h2>Final Section</h2>
+                    <p>This is the content of the last section</p>
+                    <span class="cd-date">Feb 26</span>
+                </div> <!-- cd-timeline-content -->
+            </div> <!-- cd-timeline-block -->
+        </section> <!-- cd-timeline -->
+    </div>
+</div>*@
+
+@*<h2>A clean timeline design, with animated links</h2>*@
+<div class="timeline">
+    <div class="timeline__event  animated fadeInUp delay-3s timeline__event--type1">
+        <div class="timeline__event__icon ">
+            <i class="lni-cake"></i>
+
+        </div>
+        <div class="timeline__event__date">
+            20-08-2019
+        </div>
+        <div class="timeline__event__content ">
+            <div class="timeline__event__title">
+                Birthday
+            </div>
+            <div class="timeline__event__description">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, nam! Nam eveniet ut aliquam ab asperiores, accusamus iure veniam corporis incidunt reprehenderit accusantium id aut architecto harum quidem dolorem in!</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, nam! Nam eveniet ut aliquam ab asperiores, accusamus iure veniam corporis incidunt reprehenderit accusantium id aut architecto harum quidem dolorem in!</p>
+
+            </div>
+        </div>
+    </div>
+    <div class="timeline__event animated fadeInUp delay-2s timeline__event--type2">
+        <div class="timeline__event__icon">
+            <i class="lni-burger"></i>
+
+        </div>
+        <div class="timeline__event__date">
+            20-08-2019
+        </div>
+        <div class="timeline__event__content">
+            <div class="timeline__event__title">
+                Lunch
+            </div>
+            <div class="timeline__event__description">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, nam! Nam eveniet ut aliquam ab asperiores, accusamus iure veniam corporis incidunt reprehenderit accusantium id aut architecto harum quidem dolorem in!</p>
+            </div>
+        </div>
+    </div>
+    <div class="timeline__event animated fadeInUp delay-1s timeline__event--type3">
+        <div class="timeline__event__icon">
+            <i class="lni-slim"></i>
+
+        </div>
+        <div class="timeline__event__date">
+            20-08-2019
+        </div>
+        <div class="timeline__event__content">
+            <div class="timeline__event__title">
+                Exercise
+            </div>
+            <div class="timeline__event__description">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, nam! Nam eveniet ut aliquam ab asperiores, accusamus iure veniam corporis incidunt reprehenderit accusantium id aut architecto harum quidem dolorem in!</p>
+            </div>
+
+        </div>
+    </div>
+    <div class="timeline__event animated fadeInUp timeline__event--type1">
+        <div class="timeline__event__icon">
+            <i class="lni-cake"></i>
+
+        </div>
+        <div class="timeline__event__date">
+            20-08-2019
+        </div>
+        <div class="timeline__event__content">
+            <div class="timeline__event__title">
+                Birthday
+            </div>
+            <div class="timeline__event__description">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, nam! Nam eveniet ut aliquam ab asperiores, accusamus iure veniam corporis incidunt reprehenderit accusantium id aut architecto harum quidem dolorem in!</p>
+            </div>
+        </div>
+    </div>
+
 </div>
