--- a/PersonalWebSite.Front/wwwroot/css/site.css
+++ b/PersonalWebSite.Front/wwwroot/css/site.css
@@ -11472,6 +11472,261 @@ body main .cv-container .cv-content .experience-container {
   display: flex;
   flex-grow: 1;
   flex: 1 1 0;
+  /* -------------------------------- 
+
+  Main components 
+
+  -------------------------------- */
+  /*#cd-timeline {
+      position: relative;
+      padding: 2em 0;
+      margin-top: 2em;
+      margin-bottom: 2em;
+  }
+
+  #cd-timeline::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 25px;
+      height: 100%;
+      width: 4px;
+      background: #7E57C2;
+  }*/
+  /*@media only screen and (min-width: 1170px) {
+      #cd-timeline {
+          margin-top: 3em;
+          margin-bottom: 3em;
+      }
+
+      #cd-timeline::before {
+          left: 50%;
+          margin-left: -2px;
+      }
+  }*/
+  /*.cd-timeline-block {
+      position: relative;
+      margin: 2em 0;
+  }
+
+  .cd-timeline-block:after {
+      content: "";
+      display: table;
+      clear: both;
+  }
+
+  .cd-timeline-block:first-child {
+      margin-top: 0;
+  }
+
+  .cd-timeline-block:last-child {
+      margin-bottom: 0;
+  }*/
+  /*@media only screen and (min-width: 1170px) {
+      .cd-timeline-block {
+          margin: 4em 0;
+      }
+
+      .cd-timeline-block:first-child {
+          margin-top: 0;
+      }
+
+      .cd-timeline-block:last-child {
+          margin-bottom: 0;
+      }
+  }*/
+  /*@media only screen and (min-width: 1170px) {
+      .cd-timeline-img {
+          width: 30px;
+          height: 30px;
+          left: 50%;
+          margin-left: -15px;
+          margin-top: 15px;*/
+  /* Force Hardware Acceleration in WebKit */
+  /*-webkit-transform: translateZ(0);
+          -webkit-backface-visibility: hidden;
+      }
+  }*/
+  /* .cd-timeline-content {
+       position: relative;
+       margin-left: 60px;
+       margin-right: 30px;
+       background: #333C42;
+       border-radius: 2px;
+       padding: 1em;
+
+       .timeline-content-info {
+           background: #2B343A;
+           padding: 5px 10px;
+           color: rgba(255,255,255,0.7);
+           font-size: 12px;
+           box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.08);
+           border-radius: 2px;
+
+           i {
+               margin-right: 5px;
+           }
+
+           .timeline-content-info-title, .timeline-content-info-date {
+               width: calc(50% - 2px);
+               display: inline-block;
+           }
+
+           @media (max-width: 500px) {
+               .timeline-content-info-title, .timeline-content-info-date {
+                   display: block;
+                   width: 100%;
+               }
+           }
+       }
+
+       .content-skills {
+           font-size: 12px;
+           padding: 0;
+           margin-bottom: 0;
+           display: flex;
+           flex-wrap: wrap;
+           justify-content: center;
+
+           li {
+               background: #40484D;
+               border-radius: 2px;
+               display: inline-block;
+               padding: 2px 10px;
+               color: rgba(255,255,255,0.7);
+               margin: 3px 2px;
+               text-align: center;
+               flex-grow: 1;
+           }
+       }
+   }
+
+   .cd-timeline-content:after {
+       content: "";
+       display: table;
+       clear: both;
+   }
+
+   .cd-timeline-content h2 {
+       color: rgba(255,255,255,.9);
+       margin-top: 0;
+       margin-bottom: 5px;
+   }
+
+   .cd-timeline-content p, .cd-timeline-content .cd-date {
+       color: rgba(255,255,255,.7);
+       font-size: 13px;
+       font-size: 0.8125rem;
+   }
+
+   .cd-timeline-content .cd-date {
+       display: inline-block;
+   }
+
+   .cd-timeline-content p {
+       margin: 1em 0;
+       line-height: 1.6;
+   }
+
+   .cd-timeline-content::before {
+       top: 16px;
+       right: 100%;
+       height: 0;
+       width: 0;
+       content: '';
+       border: 7px solid transparent;
+       position: absolute;
+       border-right: 7px solid #333C42;
+   }*/
+  /*@media only screen and (min-width: 768px) {
+      .cd-timeline-content h2 {
+          font-size: 20px;
+          font-size: 1.25rem;
+      }
+
+      .cd-timeline-content p {
+          font-size: 16px;
+          font-size: 1rem;
+      }
+
+      .cd-timeline-content .cd-read-more, .cd-timeline-content .cd-date {
+          font-size: 14px;
+          font-size: 0.875rem;
+      }
+  }
+
+  @media only screen and (min-width: 1170px) {
+      .cd-timeline-content {
+          color: white;
+          margin-left: 0;
+          padding: 1.6em;
+          width: 36%;
+          margin: 0 5%
+      }
+
+      .cd-timeline-content::before {
+          top: 24px;
+          left: 100%;
+          border-color: transparent;
+          border-left-color: #333C42;
+      }
+
+      .cd-timeline-content .cd-date {
+          position: absolute;
+          width: 100%;
+          left: 122%;
+          top: 6px;
+          font-size: 16px;
+          font-size: 1rem;
+      }
+
+      .cd-timeline-block:nth-child(even) .cd-timeline-content {
+          float: right;
+      }
+
+      .cd-timeline-block:nth-child(even) .cd-timeline-content::before {
+          top: 24px;
+          left: auto;
+          right: 100%;
+          border-color: transparent;
+          border-right-color: #333C42;
+      }
+
+      .cd-timeline-block:nth-child(even) .cd-timeline-content .cd-read-more {
+          float: right;
+      }
+
+      .cd-timeline-block:nth-child(even) .cd-timeline-content .cd-date {
+          left: auto;
+          right: 122%;
+          text-align: right;
+      }
+  }*/
+}
+body main .cv-container .cv-content .experience-container .cd-container {
+  width: 90%;
+  max-width: 1080px;
+  margin: 0 auto;
+  background: #2B343A;
+  padding: 0 10%;
+  border-radius: 2px;
+}
+body main .cv-container .cv-content .experience-container .cd-container::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+body main .cv-container .cv-content .experience-container .cd-timeline-img {
+  position: absolute;
+  top: 8px;
+  left: 12px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  box-shadow: 0 0 0 4px #7E57C2, inset 0 2px 0 rgba(0, 0, 0, 0.08), 0 3px 0 4px rgba(0, 0, 0, 0.05);
+}
+body main .cv-container .cv-content .experience-container .cd-timeline-img {
+  background: #673AB7;
 }
 body main .login-container {
   display: flex;
@@ -11578,5 +11833,241 @@ body #blazor-error-ui.dismiss {
 
   a {
     text-decoration: none;
+  }
+}
+/** {
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 14px;
+}
+
+body {
+    background: #f6f9fc;
+    font-family: "Open Sans", sans-serif;
+    color: #525f7f;
+}
+
+h2 {
+    margin: 5%;
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 100;
+}*/
+.timeline {
+  display: flex;
+  flex-direction: column;
+  /*margin: $margin auto;*/
+  position: relative;
+}
+.timeline__event {
+  margin-bottom: 10px;
+  position: relative;
+  display: flex;
+  margin: 10px 0;
+  border-radius: 6px;
+  align-self: center;
+  /* width: 100vw;*/
+}
+.timeline__event:nth-child(2n+1) {
+  flex-direction: row-reverse;
+}
+.timeline__event:nth-child(2n+1) .timeline__event__date {
+  border-radius: 0 6px 6px 0;
+}
+.timeline__event:nth-child(2n+1) .timeline__event__content {
+  border-radius: 6px 0 0 6px;
+}
+.timeline__event:nth-child(2n+1) .timeline__event__icon:before {
+  content: "";
+  width: 2px;
+  height: 100%;
+  background: #f6a4ec;
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  right: auto;
+  z-index: -1;
+  transform: translateX(-50%);
+  animation: fillTop 2s forwards 4s ease-in-out;
+}
+.timeline__event:nth-child(2n+1) .timeline__event__icon:after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background: #f6a4ec;
+  position: absolute;
+  right: 0;
+  z-index: -1;
+  top: 50%;
+  left: auto;
+  transform: translateY(-50%);
+  animation: fillLeft 2s forwards 4s ease-in-out;
+}
+.timeline__event__title {
+  font-size: 1.2rem;
+  line-height: 1.4;
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #9251ac;
+  letter-spacing: 1.5px;
+}
+.timeline__event__content {
+  padding: 10px;
+  box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25), 0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  background: #fff;
+  /*width: $content-width;*/
+  border-radius: 0 6px 6px 0;
+}
+.timeline__event__date {
+  color: #f6a4ec;
+  font-size: 1.5rem;
+  font-weight: 600;
+  background: #9251ac;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+  padding: 0 10px;
+  border-radius: 6px 0 0 6px;
+}
+.timeline__event__icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #9251ac;
+  padding: 10px;
+  align-self: center;
+  margin: 0 10px;
+  background: #f6a4ec;
+  border-radius: 100%;
+  width: 40px;
+  box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25), 0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  padding: 40px;
+  height: 40px;
+  position: relative;
+}
+.timeline__event__icon i {
+  font-size: 32px;
+}
+.timeline__event__icon:before {
+  content: "";
+  width: 2px;
+  height: 100%;
+  background: #f6a4ec;
+  position: absolute;
+  top: 0%;
+  z-index: -1;
+  left: 50%;
+  transform: translateX(-50%);
+  animation: fillTop 2s forwards 4s ease-in-out;
+}
+.timeline__event__icon:after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background: #f6a4ec;
+  position: absolute;
+  left: 0%;
+  z-index: -1;
+  top: 50%;
+  transform: translateY(-50%);
+  animation: fillLeftOdd 2s forwards 4s ease-in-out;
+}
+.timeline__event__description {
+  flex-basis: 60%;
+}
+.timeline__event--type2:after {
+  background: #555ac0;
+}
+.timeline__event--type2 .timeline__event__date {
+  color: #87bbfe;
+  background: #555ac0;
+}
+.timeline__event--type2:nth-child(2n+1) .timeline__event__icon:before, .timeline__event--type2:nth-child(2n+1) .timeline__event__icon:after {
+  background: #87bbfe;
+}
+.timeline__event--type2 .timeline__event__icon {
+  background: #87bbfe;
+  color: #555ac0;
+}
+.timeline__event--type2 .timeline__event__icon:before, .timeline__event--type2 .timeline__event__icon:after {
+  background: #87bbfe;
+}
+.timeline__event--type2 .timeline__event__title {
+  color: #555ac0;
+}
+.timeline__event--type3:after {
+  background: #24b47e;
+}
+.timeline__event--type3 .timeline__event__date {
+  color: #aff1b6;
+  background-color: #24b47e;
+}
+.timeline__event--type3:nth-child(2n+1) .timeline__event__icon:before, .timeline__event--type3:nth-child(2n+1) .timeline__event__icon:after {
+  background: #aff1b6;
+}
+.timeline__event--type3 .timeline__event__icon {
+  background: #aff1b6;
+  color: #24b47e;
+}
+.timeline__event--type3 .timeline__event__icon:before, .timeline__event--type3 .timeline__event__icon:after {
+  background: #aff1b6;
+}
+.timeline__event--type3 .timeline__event__title {
+  color: #24b47e;
+}
+.timeline__event:last-child .timeline__event__icon:before {
+  content: none;
+}
+
+@media (max-width: 786px) {
+  .timeline__event {
+    flex-direction: column;
+    align-self: center;
+  }
+  .timeline__event__content {
+    width: 100%;
+  }
+  .timeline__event__icon {
+    border-radius: 6px 6px 0 0;
+    width: 100%;
+    margin: 0;
+    box-shadow: none;
+  }
+  .timeline__event__icon:before, .timeline__event__icon:after {
+    display: none;
+  }
+  .timeline__event__date {
+    border-radius: 0;
+    padding: 10px;
+  }
+  .timeline__event:nth-child(2n+1) {
+    flex-direction: column;
+    align-self: center;
+  }
+  .timeline__event:nth-child(2n+1) .timeline__event__date {
+    border-radius: 0;
+    padding: 10px;
+  }
+  .timeline__event:nth-child(2n+1) .timeline__event__icon {
+    border-radius: 6px 6px 0 0;
+    margin: 0;
+  }
+}
+@keyframes fillLeft {
+  100% {
+    right: 100%;
+  }
+}
+@keyframes fillTop {
+  100% {
+    top: 100%;
+  }
+}
+@keyframes fillLeftOdd {
+  100% {
+    left: 100%;
   }
 }
