--- a/PersonalWebSite.Front/Shared/MainLayout.razor
+++ b/PersonalWebSite.Front/Shared/MainLayout.razor
@@ -1,6 +1,7 @@
 ﻿@inherits LayoutComponentBase
 @inject IStringLocalizer<MainLayout> L
 @inject LanguageService _languageService
+@inject NavigationManager Navigation
 <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
     
     <div class="navbar-brand d-flex">
@@ -75,7 +76,15 @@
 @code{
     protected void SetLanguage(Language l)
     {
-        _languageService.SetLanguage(l);
-        this.StateHasChanged();
+        //_languageService.SetLanguage(l);
+        var uri = new Uri(Navigation.Uri)
+                    .GetComponents(UriComponents.PathAndQuery, UriFormat.Unescaped);
+        var cultureEscaped = Uri.EscapeDataString(l.Localization);
+        var uriEscaped = Uri.EscapeDataString(uri);
+
+        Navigation.NavigateTo(
+            $"Culture/Set?culture={cultureEscaped}&redirectUri={uriEscaped}",
+            forceLoad: true);
+        //this.StateHasChanged();
     }
 }
