--- a/PersonalWebSite.Front/Components/Cv/CvGeneralInfo.razor
+++ b/PersonalWebSite.Front/Components/Cv/CvGeneralInfo.razor
@@ -1,15 +1,16 @@
 ﻿@inherits CustomBaseComponent
+@inject IStringLocalizer<CvGeneralInfo> L
 <div class="photo-with-info">
     @*<div class="photo">
             <img src="images/photo.png" style="width: 90px; height: 90px" />
         </div>*@
-    <span class="age text-nowrap"><i class="fas fa-calendar-alt"></i>&nbsp;34 Ans</span>
+    <span class="age text-nowrap"><i class="fas fa-calendar-alt"></i>&nbsp;35 @L["Years"]</span>
     @*<a href="tel:+33645126661" class="phone text-nowrap ms-1"><i class="fas fa-phone"></i>+33645126661</a>*@
     <a href="mailto:jul.gourdon@gmail.com" class="mail text-nowrap"><i class="fas fa-at"></i>&nbsp;jul.gourdon@gmail.com</a>
     @*<a class="skype text-nowrap" href="skype:julien.gourdon?add"><i class="fab fa-skype"></i>&nbsp;julien.gourdon</a>*@
     @if (WithCvDownload)
     {
-        <a class="d-inline d-lg-none ms-1" title="Exporter en PDF" style="white-space: nowrap" target="_blank" href="@($"/CV/cv_julien_gourdon_{LanguageService.GetCurrentLanguage().Localization}.pdf")"><i class="fa-solid fa-file-pdf"></i>&nbsp;Télécharger</a>
+        <a class="d-inline d-lg-none ms-1" title="Exporter en PDF" style="white-space: nowrap" target="_blank" href="@($"/CV/cv_julien_gourdon_{LanguageService.GetCurrentLanguage().Localization}.pdf")"><i class="fa-solid fa-file-pdf"></i>&nbsp;@L["Download"]</a>
     }
     @*<div class="info-photo">
 
