--- a/PersonalWebSite.Front/Pages/PageCv.razor
+++ b/PersonalWebSite.Front/Pages/PageCv.razor
@@ -29,8 +29,8 @@
     </div>*@
 
     <div class="cv-content display-content">
-        <div class="container-fluid">
-            <div class="row">
+        <div class="container-fluid d-flex flex-grow-1">
+            <div class="row flex-grow-1">
                 <div class="col-lg-2 left-part primary-background ">
                     <PersonalWebSite.Front.Components.Cv.CvGeneralInfo WithCvDownload="true" />
                     <PersonalWebSite.Front.Components.Cv.CvAboutMe />
