--- a/PersonalWebSite.Front/Shared/MainLayout.razor
+++ b/PersonalWebSite.Front/Shared/MainLayout.razor
@@ -10,7 +10,7 @@
         </a>
         
          <div class="d-flex flex-column ms-2">
-            <span class="title-menu">Julien Gourdon</span>
+            <span class="title-menu">Julien Gourdon - Freelance</span>
             <span class="job">@L["JobTitle"]</span>
         </div>
     </div>
