--- a/PersonalWebSite.Front/Components/Cv/CvGraduate.razor
+++ b/PersonalWebSite.Front/Components/Cv/CvGraduate.razor
@@ -1,16 +1,27 @@
-﻿<div class="cv-title">
-    <i class="fas fa-graduation-cap"></i>&nbsp;Diplômes
+﻿@inject IStringLocalizer<CvGraduate> L
+
+<div class="cv-title">
+    <i class="fas fa-graduation-cap"></i>&nbsp;@(L["CvDiplome"])
 </div>
 <div class="diploma">
     <div class="school-timeline">
         <div class="school-timeline-item">
-            <span class="text-nowrap">2012 : Master MIAGE</span>
+            <span class="text-nowrap">2012 : @(L["CvMaster"])</span>
+        </div>
+        <div class="school-timeline-ets">
+            <span class="text-nowrap"><i class="fas fa-building"></i> @(L["CvNantesUniversity"])</span>
         </div>
         <div class="school-timeline-item">
-            <span class="text-nowrap">2010 : Licence Info Gestion</span>
+            <span class="text-nowrap">2010 : @(L["CvLicence"])</span>
+        </div>
+        <div class="school-timeline-ets">
+            <span class="text-nowrap"><i class="fas fa-building"></i> @(L["CvNantesUniversity"])</span>
         </div>
         <div class="school-timeline-item">
-            <span class="text-nowrap">2009 : BTS informatique de gestion</span>
+            <span class="text-nowrap">2009 : @(L["CvBts"])</span>
+        </div>
+        <div class="school-timeline-ets">
+            <span class="text-nowrap"><i class="fas fa-building"></i> @(L["CvAngersUniversity"])</span>
         </div>
     </div>
 </div>
